@@ -1,6 +1,5 @@
 import doctest
 import unittest
-from zope.testing.doctestunit import DocFileSuite, DocFileSuite
 from zope.app.testing import setup
 from zope.component import provideAdapter
 from zope.interface import Interface
@@ -20,14 +19,7 @@ def tearDown(test):
     setup.placefulTearDown()
 
 def test_suite():
-    
-    return unittest.TestSuite(
-        (
-        DocFileSuite('README.txt',
-                     setUp=setUp, tearDown=tearDown,
-                     optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
-                     ),
-        ))
-
-if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
+    return doctest.DocFileSuite(
+        'README.txt',
+        setUp=setUp, tearDown=tearDown,
+        optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS)
