@@ -11,28 +11,20 @@
 # FOR A PARTICULAR PURPOSE.
 #
 ##############################################################################
-"""Pluggable Traverser Tests
-
-$Id$
-"""
-__docformat__ = "reStructuredText"
-import unittest
-
-from zope.testing import doctest
+"""Pluggable Traverser Tests"""
 from zope.component import testing
+import doctest
+import unittest
 
 
 def test_suite():
     return unittest.TestSuite((
         doctest.DocFileSuite(
-        'README.txt',
-        setUp=testing.setUp, tearDown=testing.tearDown,
-        optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS),
-    doctest.DocFileSuite(
-        'namespace.txt',
-        setUp=testing.setUp, tearDown=testing.tearDown,
-        optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS),
+            'README.txt',
+            setUp=testing.setUp, tearDown=testing.tearDown,
+            optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS),
+        doctest.DocFileSuite(
+            'namespace.txt',
+            setUp=testing.setUp, tearDown=testing.tearDown,
+            optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS),
         ))
-
-if __name__ == '__main__':
-    unittest.main(default='test_suite')
