@@ -15,7 +15,7 @@
 
 
   <include package="zope.viewlet" file="meta.zcml"/>
-  <include package="zope.app.securitypolicy" file="meta.zcml" />
+  <include package="zope.securitypolicy" file="meta.zcml" />
 
 
   <include package="zope.app.authentication" />
